--- a/PixelWorldsServer2/Dockerfile
+++ b/PixelWorldsServer2/Dockerfile
@@ -1,10 +1,12 @@
+# Etap 1: build
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
-WORKDIR /app
+WORKDIR /src
 COPY . .
-RUN dotnet restore
-RUN dotnet publish -c Release -o out
+RUN dotnet restore PixelWorldsServer2.csproj
+RUN dotnet publish PixelWorldsServer2.csproj -c Release -o /app/publish
 
-FROM mcr.microsoft.com/dotnet/aspnet:7.0
+# Etap 2: run
+FROM mcr.microsoft.com/dotnet/aspnet:9.0
 WORKDIR /app
-COPY --from=build /app/out .
+COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "PixelWorldsServer2.csproj"]
